--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev": "community-solid-server --config config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
   },
   "files": [
-    "config"
+    "config.json"
   ],
   "dependencies": {
     "@solid/community-server": "^8.0.0-alpha.1"
