--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "start": "community-solid-server --config config.json --baseUrl \"https://csstestnode-dhf6hxapfcbrdxem.uksouth-01.azurewebsites.net/\" --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
-    "start:dev": "community-solid-server --config config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080",
-    "prepare": "npm i"
+    "start": "npm i && community-solid-server --config config.json --baseUrl \"https://csstestnode-dhf6hxapfcbrdxem.uksouth-01.azurewebsites.net/\" --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
+    "start:dev": "community-solid-server --config config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
   },
   "files": [
     "config.json"
