--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -18,13 +18,10 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v5
         with:
-          node-version: '22.x'
+          node-version: 24
 
       - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+        run: npm ci
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
