--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.0.1",
   "description": "Run the Community Solid Server in an Azure App Service",
   "repository": "git@github.com:matthieubosquet/css-azure-app-service.git",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./index.js",
   "scripts": {
-    "start": "community-solid-server --config config.json --baseUrl \"https://csstestnode-dhf6hxapfcbrdxem.uksouth-01.azurewebsites.net/\" --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
-    "start:dev": "community-solid-server --config config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
+    "start": "node . --config config.json --baseUrl \"https://csstestnode-dhf6hxapfcbrdxem.uksouth-01.azurewebsites.net/\" --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
+    "start:dev": "node . --config config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
   },
   "files": [
     "config.json"
