--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "repository": "git@github.com:matthieubosquet/css-azure-app-service.git",
   "main": "./index.js",
   "scripts": {
-    "start": "node . --config config.json --baseUrl \"https://csstestnode-dhf6hxapfcbrdxem.uksouth-01.azurewebsites.net/\" --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
+    "start": "node . --config file.json --baseUrl $WEBSITE_HOSTNAME --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
     "start:dev": "node . --config config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
   },
   "files": [
-    "config.json"
+    "config"
   ],
   "dependencies": {
     "@solid/community-server": "^8.0.0-alpha.1"
