--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "git@github.com:matthieubosquet/css-azure-app-service.git",
   "main": "./index.js",
   "scripts": {
-    "start": "node . --config file.json --baseUrl $WEBSITE_HOSTNAME --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
-    "start:dev": "node . --config config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
+    "start": "node . --config ./config/file.json --baseUrl $WEBSITE_HOSTNAME --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
+    "start:dev": "node . --config ./config/config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
   },
   "files": [
     "config"
