--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "description": "Run the Community Solid Server in an Azure App Service",
   "repository": "git@github.com:matthieubosquet/css-azure-app-service.git",
+  "type": "module",
   "main": "./index.js",
   "scripts": {
-    "start": "node . --config ./config/file.json --baseUrl $WEBSITE_HOSTNAME --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
+    "start": "node . --config ./config/file.json --baseUrl \"https://$WEBSITE_HOSTNAME\" --rootFilePath /csstest --mainModulePath . --loggingLevel info --port $PORT",
     "start:dev": "node . --config ./config/config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
   },
   "files": [
