--- a/config/config.json
+++ b/config/config.json
@@ -1,12 +1,15 @@
 {
   "@context": [
-    "https://linkedsoftwaredependencies.org/bundles/npm/@solid/community-server/^8.0.0/components/context.jsonld"
+    "https://linkedsoftwaredependencies.org/bundles/npm/@solid/community-server/^8.0.0/components/context.jsonld",
+    "https://linkedsoftwaredependencies.org/bundles/npm/asynchronous-handlers/^1.0.0/components/context.jsonld"
   ],
   "import": [
     "css:config/app/init/default.json",
     "css:config/app/main/default.json",
     "css:config/app/variables/default.json",
-    "css:config/http/handler/default.json",
+
+    "css:config/http/handler/handlers/storage-description.json",
+
     "css:config/http/middleware/default.json",
     "css:config/http/notifications/all.json",
     "css:config/http/server-factory/http.json",
@@ -31,13 +34,38 @@
     "css:config/util/identifiers/suffix.json",
     "css:config/util/index/default.json",
     "css:config/util/logging/winston.json",
-    "css:config/util/representation-conversion/default.json",
     "css:config/util/resource-locker/file.json",
+
+    "css:config/util/representation-conversion/converters/content-type-replacer.json",
+    "css:config/util/representation-conversion/converters/dynamic-json-template.json",
+    "css:config/util/representation-conversion/converters/errors.json",
+    "css:config/util/representation-conversion/converters/form-to-json.json",
+    "css:config/util/representation-conversion/converters/markdown.json",
+    "css:config/util/representation-conversion/converters/quad-to-rdf.json",
+    "css:config/util/representation-conversion/converters/rdf-to-quad.json",
+
     "css:config/util/variables/default.json"
   ],
   "@graph": [
     {
-      "@id": "urn:css-vercel-blob-data-accessor:config:util:resource-locker:file:override_expiration",
+      "comment": "No IDP, pod provisioning or static assets (static assets is not standard).",
+      "@id": "urn:solid-server:default:HttpHandler",
+      "@type": "SequenceHandler",
+      "handlers": [
+        { "@id": "urn:solid-server:default:Middleware" },
+        {
+          "@id": "urn:solid-server:default:BaseHttpHandler",
+          "@type": "StatusWaterfallHandler",
+          "handlers": [
+            { "@id": "urn:solid-server:default:StorageDescriptionHandler" },
+            { "@id": "urn:solid-server:default:LdpHandler" }
+          ]
+        }
+      ]
+    },
+    {
+      "comment": "Long time for resource lock expiry to accomodate network delays.",
+      "@id": "urn:css:config:util:resource-locker:file:override_expiration",
       "@type": "Override",
       "overrideInstance": { "@id": "urn:solid-server:default:ResourceLocker" },
       "overrideParameters": {
@@ -46,13 +74,42 @@
       }
     },
     {
-      "@id": "urn:css-vercel-blob-data-accessor:config:storage:middleware:override_resource_store_index",
+      "comment": "Don't serve index.html instead of containers (as it is not standard).",
+      "@id": "urn:css:config:storage:middleware:override_resource_store_index",
       "@type": "Override",
       "overrideInstance": { "@id": "urn:solid-server:default:ResourceStore_Index" },
       "overrideParameters": {
         "@type": "PassthroughStore",
         "source": { "@id": "urn:solid-server:default:ResourceStore_Locking" }
       }
+    },
+    {
+      "comment": "Only use minimum set of standard content type converters (remove html/md templating as it is not standard).",
+      "@id": "urn:solid-server:default:RepresentationConverter",
+      "@type": "StatusWaterfallHandler",
+      "handlers": [
+        { "@id": "urn:solid-server:default:DynamicJsonToTemplateConverter" },
+        {
+          "comment": "Automatically finds a path through a set of converters from one type to another.",
+          "@id": "urn:solid-server:default:ChainedConverter",
+          "@type": "ChainedConverter",
+          "converters": [
+            { "@id": "urn:solid-server:default:ContentTypeReplacer" },
+            { "@id": "urn:solid-server:default:RdfToQuadConverter" },
+            { "@id": "urn:solid-server:default:QuadToRdfConverter" },
+            { "@id": "urn:solid-server:default:ErrorToJsonConverter" },
+            { "@id": "urn:solid-server:default:ErrorToQuadConverter" }
+          ]
+        }
+      ]
+    },
+    {
+      "comment": "No default UI converter (as it is not standard), go to representation converters instead.",
+      "@id": "urn:solid-server:default:UiEnabledConverter",
+      "@type": "StatusWaterfallHandler",
+      "handlers": [
+        { "@id": "urn:solid-server:default:RepresentationConverter" }
+      ]
     }
   ]
 }
