--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./index.js",
   "scripts": {
     "start": "node . --config ./config/config.json --baseUrl \"https://$WEBSITE_HOSTNAME\" --rootFilePath /data --mainModulePath . --loggingLevel info --port $PORT",
-    "start:dev": "node . --config ./config/config.json --rootFilePath data/ --mainModulePath . --loggingLevel info --port 8080"
+    "start:dev": "node . --config ./config/config.json --rootFilePath ./data --mainModulePath . --loggingLevel info --port 8080"
   },
   "files": [
     "config"
